# simple-c7-mcp

./: .gitignore  INTEGRATION_GUIDE.md  LANCEDB_SCHEMA.md  SCHEMA_SUMMARY.md  context7_lancedb_integration.py  justfile  task.md
scripts/lancedb/: BENCHMARKS.md  MARKDOWN_CHUNKING.md  README.md  REFACTORING.md  SUMMARY.md  justfile  pyproject.toml  sample_document.txt  test_markdown_chunking.py  test_simple.py
scripts/lancedb/lance_db_example/: chunking.py  cli.py  ingest.py
scripts/lancedb/lance_db_example/commands/: hello.py  users.py
scripts/lancedb/lance_db_example/services/: users.py
scripts/lancedb/tests/: __init__.py  test_cli.py  test_services.py
scripts/lancedb/tests/data/: auth-js.md  better-sqlite3.md  chart-js.md  clickhouse.md  d3.md  daisyui.md  dbt.md  deno.md  docker.md  duckdb.md  fastapi.md  fuse-js.md  go.md  granian.md  gunicorn.md  justfile  justfile.md  lancedb.md  langchain.md  leaflet.md  numpy.md  nuxt.md  onnxruntime-web.md  pandas.md  papaparse.md  pgvector.md  pino.md  podman.md  poem.md  polars.md  postgres.md  pydantic.md  pytest.md  python.md  requests.md  rust.md  scipy.md  seaborn.md  serde.md  socket-io.md  (+12 more)
scripts/lancedb/utils/: rename.py
scripts/simple-c7-mcp/: .dockerignore  CLAUDE.md  Dockerfile  FETCH_DOC_GUIDE.md  IMPLEMENTATION.md  IMPLEMENTATION_STATUS.md  JUSTFILE_COMMANDS.md  JUSTFILE_IMPLEMENTATION.md  LANCEDB_SCHEMA.md  MCP_TRANSPORT_ISSUE.md  README.md  docker-compose.yml  justfile  pyproject.toml  systemd-c7-mcp-data.tar  test_api.sh  test_create_library.py
scripts/simple-c7-mcp/c7_mcp/: __init__.py  api.py  cli.py  db.py  exceptions.py  models.py
scripts/simple-c7-mcp/c7_mcp/commands/: hello.py  serve.py  users.py
scripts/simple-c7-mcp/c7_mcp/routers/: __init__.py  documents.py  libraries.py  mcp.py
scripts/simple-c7-mcp/c7_mcp/schemas/: __init__.py  mcp.py  (+2 more)
scripts/simple-c7-mcp/quadlet/: c7-mcp-data.volume  c7-mcp.build  c7-mcp.container
scripts/simple-c7-mcp/scripts/: migrate-lancedb-to-volume.sh  seed-from-files.sh
scripts/simple-c7-mcp/tests/: __init__.py  conftest.py  test_cli.py  test_integration.py  test_mcp.py  test_mcp_transport.py  test_services.py
scripts/simple-c7-mcp/utils/: rename.py
(+22 files in other folders)
