[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lance-db-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.20.0",
]

[project.scripts]
lance-db-example = "lance_db_example.cli:app"

[dependency-groups]
dev = [
    "pyright>=1.1.407",
    "pytest>=8.0",
    "ruff>=0.14.8",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "D",   # pydocstyle
]

[tool.ruff.lint.pydocstyle]
convention = "google"
