[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lance-db-example"
version = "0.1.0"
description = "LanceDB document ingestion and vector search tool"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.20.0",
    "lancedb>=0.16.0",
    "rich>=13.0.0",
    "pandas>=2.0.0",
    "torch>=2.0.0",
    "sentence-transformers>=2.2.0",
    "langchain-text-splitters>=0.2.0",
]

[project.scripts]
lance-db-example = "lance_db_example.cli:app"

[dependency-groups]
dev = [
    "pyright>=1.1.407",
    "pytest>=8.0",
    "ruff>=0.14.8",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "D",   # pydocstyle
]

[tool.ruff.lint.pydocstyle]
convention = "google"
