[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "c7-mcp"
version = "0.1.0"
description = "Context7 MCP Server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "granian[reload]>=1.0.0",
    "typer>=0.20.0",
]

[project.scripts]
c7-mcp = "c7_mcp.cli:app"

[dependency-groups]
dev = [
    "pyright>=1.1.407",
    "pytest>=8.0",
    "ruff>=0.14.8",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "D",   # pydocstyle
]

[tool.ruff.lint.pydocstyle]
convention = "google"
